@@ -1,7 +1,7 @@
 package com.kentwentyfour.project12.presentation.controllers;
 
-import com.kentwentyfour.project12.bots.BotHillClimbing;
 import com.kentwentyfour.project12.bots.BasicBot;
+import com.kentwentyfour.project12.bots.BotHillClimbing;
 import com.kentwentyfour.project12.bots.BotPlayer;
 import com.kentwentyfour.project12.bots.MultipleTurnBot;
 import com.kentwentyfour.project12.bots.improvedbot.MazeBot;
@@ -15,51 +15,43 @@ import javafx.beans.value.ObservableValue;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
 import javafx.scene.control.*;
-import javafx.animation.KeyFrame;
-import javafx.animation.Timeline;
-import javafx.stage.Stage;
-import javafx.util.Duration;
+import javafx.scene.control.Alert;
 
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.net.URL;
 import java.util.ArrayList;
-import java.util.List;
 import java.util.Optional;
-import java.util.ResourceBundle;
+import java.util.ResourceBundle;import javafx.animation.KeyFrame;
+import javafx.animation.Timeline;
+import javafx.stage.Stage;
+import javafx.util.Duration;
+import javafx.scene.control.ButtonType;
 
-/**
- * Controller class for managing settings in the application.
- * Handles bot selection, ball hitting, and other game-related functionalities.
- */
 public class SettingsController implements Initializable {
+    @FXML
+    public ComboBox botChooseBox;
 
     @FXML
-    private ComboBox<String> botChooseBox;
-
-    @FXML
-    private Label turnCounter;
+    public Label turnCounter;
 
     @FXML
     private Label xVelocity;
-
     @FXML
     private Label yVelocity;
-
     @FXML
     private Slider vy;
-
     @FXML
     private Slider vx;
-
     @FXML
     private Button hit;
+    // all variables
+    private  String selectedLevel;
+    private int turnCount=1;
+    private int  multipleBotTurnsCounter = 0;
 
-    private String selectedLevel;
-    private int turnCount = 1;
-    private int multipleBotTurnsCounter = 0;
-    private boolean multipleBotTurns = false;
+    boolean multipleBotTurns = false;
     private double startX;
     private double startY;
     private double targetX;
@@ -68,51 +60,44 @@ public class SettingsController implements Initializable {
     private PhysicsEngine physicsEngine;
     private ArrayList<GolfBall> balls;
     private BotPlayer bot;
-    private final ButtonType BUTTON_RESTART = new ButtonType("Start from the beginning", ButtonBar.ButtonData.OK_DONE);
-    private final ButtonType BUTTON_CONTINUE = new ButtonType("Continue", ButtonBar.ButtonData.CANCEL_CLOSE);
-    private final ButtonType BUTTON_END_GAME = new ButtonType("End Game", ButtonBar.ButtonData.CANCEL_CLOSE);
+    private  final ButtonType BUTTON_RESTART = new ButtonType("Start from the beginning", ButtonBar.ButtonData.OK_DONE);
+    private  final ButtonType BUTTON_CONTINUE = new ButtonType("Continue", ButtonBar.ButtonData.CANCEL_CLOSE);
+    private  final ButtonType BUTTON_END_GAME = new ButtonType("End Game", ButtonBar.ButtonData.CANCEL_CLOSE);
 
-    /**
-     * Initializes the controller class.
-     *
-     * @param location  the location used to resolve relative paths for the root object, or null if the location is not known.
-     * @param resources the resources used to localize the root object, or null if the root object was not localized.
-     */
     @Override
     public void initialize(URL location, ResourceBundle resources) {
-        botChooseBox.getItems().addAll("Basic Bot", "HillClimbing Bot", "Maze bot");
-
-        vy.valueProperty().addListener((observableValue, oldValue, newValue) -> {
-            double y = newValue.doubleValue();
-            yVelocity.setText(String.format("Y Velocity: %.2f", y));
+        multipleBotTurns=false;
+        botChooseBox.getItems().addAll("Basic Bot","HillClimbing Bot","Maze bot" );
+        vy.valueProperty().addListener(new ChangeListener<Number>() {
+            @Override
+            public void changed(ObservableValue<? extends Number> observableValue, Number oldValue, Number newValue) {
+                double y = newValue.doubleValue();
+                yVelocity.setText(String.format("Y Velocity: %.2f", y));
+            }
         });
 
-        vx.valueProperty().addListener((observableValue, oldValue, newValue) -> {
-            double x = newValue.doubleValue();
-            xVelocity.setText(String.format("X Velocity: %.2f", x));
+        vx.valueProperty().addListener(new ChangeListener<Number>() {
+            @Override
+            public void changed(ObservableValue<? extends Number> observableValue, Number oldValue, Number newValue) {
+                double x = newValue.doubleValue();
+                xVelocity.setText(String.format("X Velocity: %.2f", x));
+            }
         });
+        // bot = new Bot(balls.getFirst(), physicsEngine, mapManager);
+
     }
-
-    /**
-     * Handles the "hit" action, simulating a ball hit with the specified velocities.
-     */
     @FXML
-    public void hit() {
+    public void hit () {
         double xVelocityValue = vx.getValue();
         double yVelocityValue = vy.getValue();
-        CoordinatesPath coordinatesPath = physicsEngine.calculateCoordinatePath(balls.get(0), xVelocityValue, yVelocityValue);
-        mapManager.animateMovableObject(balls.get(0), coordinatesPath);
+        CoordinatesPath coordinatesPath=  physicsEngine.calculateCoordinatePath(balls.getFirst(),xVelocityValue, yVelocityValue);
+        mapManager.animateMovableObject(balls.getFirst(),coordinatesPath);
         String stopping = coordinatesPath.getStoppingCondition();
-        handleStop(stopping, coordinatesPath.getPath());
-        turnCounter.setText("Turn: " + turnCount++);
+        handleStop(stopping,coordinatesPath.getPath());
+        turnCounter.setText("Turn: "+turnCount++);
+
     }
 
-    /**
-     * Handles the stopping condition of the ball movement.
-     *
-     * @param condition the stopping condition.
-     * @param path      the path of the ball.
-     */
     private void handleStop(String condition, double[][] path) {
         Timeline timeline = new Timeline(new KeyFrame(Duration.seconds(2), event -> {
             if ("outside_of_playable_area".equals(condition)) {
@@ -120,19 +105,42 @@ public class SettingsController implements Initializable {
                     Optional<ButtonType> result = showGameOverPopup();
                     if (result.isPresent()) {
                         if (result.get() == BUTTON_RESTART) {
-                            resetBallPosition();
+                            GolfBall firstBall = balls.get(0);
+                            if (firstBall != null) {
+                                firstBall.setPosition(startX, startY);
+                                mapManager.updateCoordinates(firstBall);
+
+                                turnCount=1;
+                                turnCounter.setText("Turn: "+turnCount);
+                                multipleBotTurnsCounter = 0;
+                                multipleBotTurns =false;
+                            }
                         } else if (result.get() == BUTTON_CONTINUE) {
-                            continueGame(path);
+                            GolfBall ball = balls.get(0);
+                            ball.setPosition(ball.getX(), ball.getY());
+
+                            mapManager.updateCoordinates(ball);
+                            if(multipleBotTurns){
+                                multipleBotTurnsCounter++;
+                                BotMoveMultipleTurns(multipleBotTurnsCounter);
+                            }
                         }
                     }
                 });
             } else if ("ball_in_the_hole".equals(condition)) {
-                multipleBotTurns = false;
+                multipleBotTurns =false;
                 Platform.runLater(() -> {
                     Optional<ButtonType> result = showWinPopup();
                     if (result.isPresent()) {
                         if (result.get() == BUTTON_RESTART) {
-                            resetBallPosition();
+                            GolfBall firstBall = balls.get(0);
+                            if (firstBall != null) {
+                                firstBall.setPosition(startX, startY);
+                                mapManager.updateCoordinates(firstBall);
+                                turnCount=1;
+                                turnCounter.setText("Turn: "+turnCount);
+                                multipleBotTurnsCounter = 0;
+                            }
                         } else if (result.get() == BUTTON_END_GAME) {
                             Platform.runLater(() -> {
                                 Stage stage = (Stage) vx.getScene().getWindow();
@@ -146,37 +154,40 @@ public class SettingsController implements Initializable {
                     Optional<ButtonType> result = showObstacleHitPopup();
                     if (result.isPresent()) {
                         if (result.get() == BUTTON_RESTART) {
-                            resetBallPosition();
+                            GolfBall firstBall = balls.get(0);
+                            if (firstBall != null) {
+                                firstBall.setPosition(startX, startY);
+                                mapManager.updateCoordinates(firstBall);
+                                turnCount=1;
+                                turnCounter.setText("Turn: "+turnCount);
+                            }
+                            multipleBotTurnsCounter = 0;
+                            multipleBotTurns =false;
                         } else if (result.get() == BUTTON_CONTINUE) {
                             GolfBall ball = balls.get(0);
-                            if (path[0].length > 2) {
+                            //sets ball position to last valid coordinates
+                            if(path[0].length>2){
                                 ball.setPosition(path[0][path[0].length - 2], path[1][path[1].length - 2]);
-                            } else {
+                            }else{
                                 ball.setPosition(path[0][0], path[1][0]);
                             }
                             mapManager.updateCoordinates(ball);
-                            if (multipleBotTurns) {
+                            if(multipleBotTurns){
                                 multipleBotTurnsCounter++;
                                 BotMoveMultipleTurns(multipleBotTurnsCounter);
                             }
                         }
                     }
                 });
-            } else if (multipleBotTurns) {
+            }else  if(multipleBotTurns){
                 multipleBotTurnsCounter++;
                 BotMoveMultipleTurns(multipleBotTurnsCounter);
             }
         }));
         timeline.play();
     }
-
-    /**
-     * Shows the game over popup.
-     *
-     * @return an Optional containing the selected button type.
-     */
     private Optional<ButtonType> showGameOverPopup() {
-        Alert alert = new Alert(Alert.AlertType.CONFIRMATION);
+        javafx.scene.control.Alert alert = new javafx.scene.control.Alert(Alert.AlertType.CONFIRMATION);
         alert.setTitle("Game Over");
         alert.setHeaderText("The ball is outside of playable area");
         alert.setContentText("Choose action:");
@@ -184,126 +195,105 @@ public class SettingsController implements Initializable {
         return alert.showAndWait();
     }
 
-    /**
-     * Shows the obstacle hit popup.
-     *
-     * @return an Optional containing the selected button type.
-     */
     private Optional<ButtonType> showObstacleHitPopup() {
-        Alert alert = new Alert(Alert.AlertType.CONFIRMATION);
+        javafx.scene.control.Alert alert = new javafx.scene.control.Alert(Alert.AlertType.CONFIRMATION);
         alert.setTitle("Obstacle hit");
         alert.setHeaderText("The ball hit an obstacle");
         alert.setContentText("Choose action:");
         alert.getButtonTypes().setAll(BUTTON_RESTART, BUTTON_CONTINUE);
         return alert.showAndWait();
     }
-
-    /**
-     * Shows the win popup.
-     *
-     * @return an Optional containing the selected button type.
-     */
     private Optional<ButtonType> showWinPopup() {
-        Alert alert = new Alert(Alert.AlertType.CONFIRMATION);
+        javafx.scene.control.Alert alert = new javafx.scene.control.Alert(Alert.AlertType.CONFIRMATION);
         alert.setTitle("Congratulations!");
+        alert.setHeaderText(null);
         alert.setContentText("You won!");
         alert.getButtonTypes().setAll(BUTTON_RESTART, BUTTON_END_GAME);
         return alert.showAndWait();
     }
 
-    /**
-     * Sets the initial values for the controller.
-     *
-     * @param startX        the starting X coordinate.
-     * @param startY        the starting Y coordinate.
-     * @param mapManager    the map manager.
-     * @param physicsEngine the physics engine.
-     * @param balls         the list of golf balls.
-     * @param targetX       the target X coordinate.
-     * @param targetY       the target Y coordinate.
-     * @param selectedLevel the selected level.
-     */
-    public void setInitialValues(double startX, double startY, MapManager mapManager, PhysicsEngine physicsEngine, ArrayList<GolfBall> balls, double targetX, double targetY, String selectedLevel) {
+    public void setInitialValues( double startX, double startY,  MapManager mapManager, PhysicsEngine physicsEngine, ArrayList<GolfBall> balls,double targetX,double targetY, String selectedLevel) {
+        // Set the selected game mode
+        // Set the initial positions and properties of the objects
         this.startX = startX;
         this.startY = startY;
+
         this.targetX = targetX;
         this.targetY = targetY;
+
         this.selectedLevel = selectedLevel;
+
+        // Set the map manager and physics engine
         this.mapManager = mapManager;
         this.physicsEngine = physicsEngine;
+
+        // Set the list of golf balls
         this.balls = balls;
     }
-
-    /**
-     * Handles the multiple turn bot move.
-     *
-     * @param multipleBotTurnsCounter the counter for multiple bot turns.
-     */
-    public void BotMoveMultipleTurns(int multipleBotTurnsCounter) {
+    public void  BotMoveMultipleTurns(int multipleBotTurnsCounter){
         MultipleTurnBot botMT = (MultipleTurnBot) bot;
 
-        if (multipleBotTurnsCounter + 1 < botMT.getCurrentWaypointPath().size()) {
+        if(multipleBotTurnsCounter+1<botMT.getCurrentWaypointPath().size()) {
             double waypointCoordX = botMT.getCurrentWaypointPath().get(multipleBotTurnsCounter).x;
             double waypointCoordY = botMT.getCurrentWaypointPath().get(multipleBotTurnsCounter).y;
 
             double nextWaypointCoordX = botMT.getCurrentWaypointPath().get(multipleBotTurnsCounter + 1).x;
             double nextWaypointCoordY = botMT.getCurrentWaypointPath().get(multipleBotTurnsCounter + 1).y;
 
-            GolfBall ball = balls.get(0);
+            GolfBall ball = balls.getFirst();
             double ballCoordX = ball.getX();
             double ballCoordY = ball.getY();
 
-            if (!(waypointCoordX == ballCoordX && waypointCoordY == ballCoordY)) {
-                botMT.genereteWaypointPath(targetX, targetY);
+            // checks if the ball landed at waypoint
+            if(!(Math.abs(Math.abs(waypointCoordX) - Math.abs(ballCoordX))<0.03 && Math.abs(Math.abs(waypointCoordY) - Math.abs(ballCoordY))<0.03)) {
+                botMT.generateWaypointPath(targetX, targetY);
                 nextWaypointCoordX = botMT.getCurrentWaypointPath().get(multipleBotTurnsCounter).x;
                 nextWaypointCoordY = botMT.getCurrentWaypointPath().get(multipleBotTurnsCounter).y;
+                this.multipleBotTurnsCounter = 0;
             }
-
             CoordinatesPath coordinatesPath = botMT.calculatePath(ball, nextWaypointCoordX, nextWaypointCoordY);
-            mapManager.animateMovableObject(ball, coordinatesPath);
+            mapManager.animateMovableObject(balls.getFirst(), coordinatesPath);
             String stopping = coordinatesPath.getStoppingCondition();
             multipleBotTurns = true;
             handleStop(stopping, coordinatesPath.getPath());
-        } else {
-            System.err.println("The full path has not been generated");
+        }
+        else{
+            System.err.println("the full path has not been generated");
         }
     }
-
-    /**
-     * Handles the bot move.
-     */
     public void BotMove() {
-        String selectedBot = botChooseBox.getSelectionModel().getSelectedItem();
+        String selectedBot = (String) botChooseBox.getSelectionModel().getSelectedItem();
 
         try {
             if (selectedBot == null) {
                 return;
             }
 
-            boolean multipleTurns = false;
+            boolean multipleTurns =false;
             switch (selectedBot) {
                 case "Basic Bot" -> bot = new BasicBot();
                 case "Maze bot" -> {
                     bot = new MazeBot();
                     multipleTurns = true;
                 }
-                case "HillClimbing Bot" -> bot = new BotHillClimbing();
+                case "HillClimbing" -> bot = new BotHillClimbing();
                 default -> bot = new BotHillClimbing();
             }
-
-            if (multipleTurns) {
+            if(multipleTurns){
                 MultipleTurnBot botMT = (MultipleTurnBot) bot;
-                botMT.genereteWaypointPath(targetX, targetY);
-                CoordinatesPath coordinatesPath = botMT.calculatePath(balls.get(0), botMT.getCurrentWaypointPath().get(0).x, botMT.getCurrentWaypointPath().get(0).y);
-                mapManager.animateMovableObject(balls.get(0), coordinatesPath);
+                botMT.generateWaypointPath(targetX,targetY);
+                CoordinatesPath coordinatesPath = botMT.calculatePath(balls.getFirst(),botMT.getCurrentWaypointPath().get(1).x, botMT.getCurrentWaypointPath().get(1).y);
+                mapManager.animateMovableObject(balls.getFirst(), coordinatesPath);
                 String stopping = coordinatesPath.getStoppingCondition();
+                //exportExperimentData(bot,coordinatesPath,selectedLevel);
                 multipleBotTurns = true;
                 handleStop(stopping, coordinatesPath.getPath());
-            } else {
-                CoordinatesPath coordinatesPath = bot.calculatePath(balls.get(0), targetX, targetY);
-                mapManager.animateMovableObject(balls.get(0), coordinatesPath);
+
+            }else{
+                CoordinatesPath coordinatesPath = bot.calculatePath(balls.getFirst(),targetX, targetY);
+                mapManager.animateMovableObject(balls.getFirst(), coordinatesPath);
                 String stopping = coordinatesPath.getStoppingCondition();
-                exportExperimentData(bot, coordinatesPath, selectedLevel);
+                exportExperimentData(bot,coordinatesPath,selectedLevel);
                 multipleBotTurns = false;
                 handleStop(stopping, coordinatesPath.getPath());
             }
@@ -312,17 +302,11 @@ public class SettingsController implements Initializable {
         }
     }
 
-    /**
-     * Exports experiment data to a CSV file.
-     *
-     * @param bot           the bot used in the experiment.
-     * @param path          the coordinates path of the ball.
-     * @param selectedLevel the selected level.
-     */
-    public void exportExperimentData(BotPlayer bot, CoordinatesPath path, String selectedLevel) {
+    public void exportExperimentData(BotPlayer bot, CoordinatesPath path,String selectedLevel){
         String csvFilePath = "src/main/java/com/kentwentyfour/project12/_ExperimentsData/experiment_data.csv";
 
         try (FileWriter writer = new FileWriter(csvFilePath, true)) {
+            // If the file doesn't exist yet, write the header
             if (!new File(csvFilePath).exists()) {
                 writer.append("Level,BotName,ComputationTime(ms),NumberOfTurns\n");
             }
@@ -334,40 +318,6 @@ public class SettingsController implements Initializable {
 
         } catch (IOException e) {
             System.err.println("Error writing to CSV file: " + e.getMessage());
-        }
-    }
-
-    /**
-     * Resets the ball position to the starting coordinates.
-     */
-    private void resetBallPosition() {
-        GolfBall firstBall = balls.get(0);
-        if (firstBall != null) {
-            firstBall.setPosition(startX, startY);
-            mapManager.updateCoordinates(firstBall);
-            turnCount = 1;
-            turnCounter.setText("Turn: " + turnCount);
-            multipleBotTurnsCounter = 0;
-            multipleBotTurns = false;
-        }
-    }
-
-    /**
-     * Continues the game from the current position.
-     *
-     * @param path the path of the ball.
-     */
-    private void continueGame(double[][] path) {
-        GolfBall ball = balls.get(0);
-        if (path[0].length > 2) {
-            ball.setPosition(path[0][path[0].length - 2], path[1][path[1].length - 2]);
-        } else {
-            ball.setPosition(path[0][0], path[1][0]);
-        }
-        mapManager.updateCoordinates(ball);
-        if (multipleBotTurns) {
-            multipleBotTurnsCounter++;
-            BotMoveMultipleTurns(multipleBotTurnsCounter);
         }
     }
 }
